# LoginFieldDetector

./: .buildinfo  .gitignore  README.md  changelog.html  english_domains_unique.json  examples.html  filter_domains.py  genindex.html  getting_started.html  index.html  installation.html  login_field_detector.html  manage_training_urls.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: docs.yml  release.yml  test.yml  upload_to_hf.yml
_sources/: changelog.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  login_field_detector.rst.txt  modules.rst.txt
dataset/: error_urls.json  failed_urls.json  failed_urls_test1.json  probs.json  tracker  training_urls.json
docs/source/: changelog.rst  conf.py  getting_started.rst  index.rst
login_field_detector/: __init__.py  cached_url.py  data_loader.py  field_detector.py  html_feature_extractor.py  html_fetcher.py  html_serializer.py  keywords.json  oauth_providers.json  training_urls.json  utils.py
tests/: conftest.py  pytest.ini  test_detector.py  test_feature_extractor.py  test_html_fetcher.py
tests/feature_extraction/: test_invalid_html.py  test_valid_html.py
tests/feature_extraction/invalid/: js_rendered_form.html  large_page.html  malformed.html  missing_names.html  mixed_content.html  non_login.html  overloaded_attributes.html  uncommon_attributes.html  unlabeled_inputs.html
tests/live_tests/: test_live_urls.py
tests/test_html/: cloudflare_checkbox.html  malformed.html  simple_login.html  special_chars.html
(+12 files in other folders)
